fix: workout params icons and values alignment

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Round|Material+Icons+Outlined");
 
-$body-font-family: 'Inter', sans;
+$body-font-family: 'Inter';
 $dialog-border-radius: 16px
